; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_mr.c_mlx4_ib_fmr_dealloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_mr.c_mlx4_ib_fmr_dealloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_fmr = type { i32 }
%struct.mlx4_ib_fmr = type { i32 }
%struct.mlx4_ib_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_ib_fmr_dealloc(%struct.ib_fmr* %0) #0 {
  %2 = alloca %struct.ib_fmr*, align 8
  %3 = alloca %struct.mlx4_ib_fmr*, align 8
  %4 = alloca %struct.mlx4_ib_dev*, align 8
  %5 = alloca i32, align 4
  store %struct.ib_fmr* %0, %struct.ib_fmr** %2, align 8
  %6 = load %struct.ib_fmr*, %struct.ib_fmr** %2, align 8
  %7 = call %struct.mlx4_ib_fmr* @to_mfmr(%struct.ib_fmr* %6)
  store %struct.mlx4_ib_fmr* %7, %struct.mlx4_ib_fmr** %3, align 8
  %8 = load %struct.ib_fmr*, %struct.ib_fmr** %2, align 8
  %9 = getelementptr inbounds %struct.ib_fmr, %struct.ib_fmr* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.mlx4_ib_dev* @to_mdev(i32 %10)
  store %struct.mlx4_ib_dev* %11, %struct.mlx4_ib_dev** %4, align 8
  %12 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %4, align 8
  %13 = getelementptr inbounds %struct.mlx4_ib_dev, %struct.mlx4_ib_dev* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.mlx4_ib_fmr*, %struct.mlx4_ib_fmr** %3, align 8
  %16 = getelementptr inbounds %struct.mlx4_ib_fmr, %struct.mlx4_ib_fmr* %15, i32 0, i32 0
  %17 = call i32 @mlx4_fmr_free(i32 %14, i32* %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %1
  %21 = load %struct.mlx4_ib_fmr*, %struct.mlx4_ib_fmr** %3, align 8
  %22 = call i32 @kfree(%struct.mlx4_ib_fmr* %21)
  br label %23

23:                                               ; preds = %20, %1
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local %struct.mlx4_ib_fmr* @to_mfmr(%struct.ib_fmr*) #1

declare dso_local %struct.mlx4_ib_dev* @to_mdev(i32) #1

declare dso_local i32 @mlx4_fmr_free(i32, i32*) #1

declare dso_local i32 @kfree(%struct.mlx4_ib_fmr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
